@@ -10,6 +10,15 @@
 	* interfaces/python/graphobject.c, interfaces/R/src/rinterface.c :
 	adapted to new interface of igraph_are_connected
 	
+2006-04-30  Gabor Csardi  <csardi@kzoo.edu>
+
+	* src/igraph.h (igraph_vs_t, igraph_es_t) : added slots from 
+	sequence vertex selector type
+	* src/iterators.c (igraph_vs_seq, igraph_vss_seq)
+	(igraph_es_seq, igraph_ess_seq) : added
+	(igraph_vs_destroy, igraph_vit_create, igraph_es_destroy) 
+	(igraph_eit_create) : updated
+
 2006-04-29  Gabor Csardi  <csardi@kzoo.edu>
 
 	* src/structural_properties.c (igraph_minimum_spanning_tree_prim) :
